# gtk-update-icon-cache

./: .gitignore  Makefile.am  README  README.md  configure.ac
docs/: Makefile.am
gtk/: Makefile.am
po/: Makevars  POTFILES.in  af.po  am.po  an.po  ang.po  ar.po  as.po  ast.po  az.po  az_IR.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  (+77 more)
utils/: Makefile  extract-po.py
